# geniac

./: .coveragerc  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.rst  INSTALL.md  README.md  environment.yml  main.nf  nextflow.config  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  new_feature.md
.gitlab/issue_templates/: bug_report.md  new_feature.md  update_containers.md
.gitlab/merge_request_templates/: merge_request_template.md
assets/: Dockerfile.env  README.md  def.env  heatmap_header.txt  metadata.tsv  multiqc_config.yaml  pca_header.txt
cmake/: CMakeLists.txt  FindApptainer.cmake  FindDocker.cmake  FindNextflow.cmake  FindPodman.cmake  FindSingularity.cmake  README.md  checkConfigFiles.cmake  createPathDirectories.cmake  createWorkDir.cmake  functionColorMessage.cmake  initCmakePreload.sh  stepAddTestTargets.cmake  stepCheckOptions.cmake  stepFillConfigTemplate.cmake  stepFindPackages.cmake  stepGitInfo.cmake  stepMainCoreScript.cmake  stepSetVariables.cmake
conf/: base.config  conda.config  genomes.config  multiconda.config  multiconda.config.example  path.config.example  process.config  singularity.config  standard.config  test.config  tools.config
conf/templates/: CMakeLists.txt  base.config.in  tools-path.config.in
data/: CMakeLists.txt  cmake-init-default.cmake  createSubmodule.bash  useCases.bash
data/conf/: base.config  cluster.config  conda.config  docker.config  geniac.config  genomes.config  multiconda.config  multipath.config  path.config  podman.config  singularity.config
data/conf/templates/: cluster.config.in
data/modules/: CMakeLists.txt
data/modules/fromSource/: CMakeLists.txt
data/nf-modules/local/process/: renvInit.nf
data/recipes/docker/: r.Dockerfile
data/recipes/singularity/: r.def
docs/: Makefile  README.md  admin.rst  changelog.rst  check.rst  cli.rst  conda.rst  conf.py  contributing.rst  customcmd.rst  devcycle.rst  environment.yml  faq.rst  from-source-examples.rst  index.rst  install.rst  installation.md  intro.rst  linux.rst  misc.rst  output.md  overview.rst  process.rst  profiles.rst  renv.rst  requirements.txt  run.rst  substitutions.rst  usage.md
docs/images/: geniac.uml  image-source.txt
env/: .alpine.env.swp  alpine.env
install/: README.md  cmake-init-default.cmake  cmake-init-phupe.cmake  cmake-init.cmake  docker.nf  main.nf  nextflow.config  nextflow.config.in  singularity.nf
install/lib/: functions.nf
modules/: .CMakeLists.txt.swp  CMakeLists.txt  helloWorld.sh  helloworld.sh
modules/helloWorld/: CMakeLists.txt
modules/helloworld/: .CMakeLists.txt.swp  CMakeLists.txt  main.cpp
pipeline/: CHANGELOG  README.md  containers.nf  environment.yml  main.nf  nextflow.config  singularity-recipes.nf
pipeline/assets/: dev_message.txt  oncomplete_template.html  oncomplete_template.txt
pipeline/conf/: base.config  cluster.config.example  containers.config.example  genomes.config.example  multiconda.config  singularity.config  tools.config
pipeline/conf/templates/: CMakeLists.txt  base.config.in  cluster.config.in  containers.config.in  genomes.config.in
pipeline/docs/: README.md  installation.md  reference_genomes.md  troubleshooting.md
pipeline/recipes/conda/: sambamba.yml  trickySoftware.yml
pipeline/recipes/docker/: bcl2fastq.Dockerfile
recipes/conda/: trickysoftware.yml
recipes/dependencies/: myDependency.sh
recipes/docker/: alpine.Dockerfile
recipes/singularity/: alpine.def  lolcow.def
src/: README.md
src/geniac/: __init__.py  __main__.py  base.py  check.py  command.py  config.py  confor.py  parser.py
src/geniac/cli/: __main__.py
src/geniac/commands/: __init__.py  base.py  check.py  confor.py  (+1 more)
src/scripts/: geniac
test/: metadata.tsv  multiqc_report.html  samplePlan.csv  sampleplan.csv
tests/: README.md  __init__.py  conftest.py  test_base.py  test_check.py  test_commands_base.py  test_commands_check.py  test_commands_confor.py  test_commands_lint.py  test_confor.py  test_main.py
tests/data/: main.nf  nextflow.config
utils/: CMakeLists.txt  CONTRIBUTING.md  README.md  environment.yml  gen_env.sh
utils/cmake/: getNextflowVariables.cmake  initCmakePreload.sh  stepGitInfo.cmake  stepMainCoreScript.cmake  utils.cmake  utilsSetVariables.cmake
utils/conda/: README.md  install_tools_via_conda.sh
utils/docker/: README.md  build_containers.sh  images_list.txt
utils/docker/bowtie-1.2/: Dockerfile
utils/docker/bowtie2-2.2.5/: Dockerfile
utils/docker/dupradar-1.10.0/: Dockerfile
utils/docker/exploratory_analysis/: Dockerfile
utils/docker/fastqc-0.11.8/: Dockerfile
utils/docker/geneSaturation/: Dockerfile
utils/docker/hisat2-2.1.0/: Dockerfile
utils/docker/htseq-0.11.2/: Dockerfile
utils/docker/markduplicates/: Dockerfile
utils/docker/merge_counts/: Dockerfile
utils/docker/multiqc-1.6/: Dockerfile
utils/docker/multiqc-1.7/: Dockerfile
utils/docker/preseq-2.0.3/: Dockerfile
utils/docker/r-markdown-0.8/: Dockerfile
utils/docker/rnaseq-2.0/: Dockerfile  environment.yml
utils/docker/rseqc-2.6.4/: Dockerfile
utils/docker/samtools-1.9/: Dockerfile
utils/docker/star-2.6.1b/: Dockerfile
utils/docker/subread-1.6.2/: Dockerfile
utils/docker/tophat-2.1.1/: Dockerfile
utils/docs/: admin.rst  basic.rst  conf.py  contrib.rst  devcycle.rst  index.rst  install.rst  intro.rst  naming.rst  overview.rst  process.rst  profiles.rst  run.rst
utils/install/: cmake-init-phupe.cmake  deploy.sh  docker.nf  nextflow.config  singularity-recipes.nf  singularity.nf
utils/singularity/: README.md  build_containers.sh
utils/singularity/recipes/: bowtie-1.2.def  bowtie2-2.2.5.def  dupradar-1.10.0.def  exploratory_analysis.def  fastqc-0.11.8.def  geneSaturation.def  hisat2-2.1.0.def  htseq-0.11.2.def  markduplicates.def  merge_counts.def  multiqc-1.6.def  multiqc-1.7.def  preseq-2.0.3.def  r-markdown-0.8.def  rnaseq-2.0.def  rseqc-2.6.4.def  samtools-1.9.def  star-2.6.1b.def  subread-1.6.2.def  tophat-2.1.1.def
(+45 files in other folders)
