[build-system]
requires = ["setuptools==80.10.1", "setuptools-scm==8.1.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "geniac"
description = "Automatic Configuration GENerator and Installer for nextflow pipeline"
authors = [
    { name = "Philippe Hupé", email = "philippe.hupe@curie.fr" },
    { name = "Julien Roméjon" },
    { name = "Fabrice Allain" },
]
license-files = ["LICENSE"]
readme = { file = "README.md", content-type = "text/markdown; charset=UTF-8" }
requires-python = ">=3.12"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "colorlog==6.8.2",
    "dotty-dict==1.3.1",
    "gitpython==3.1.43",
    "pre-commit==3.8.0",
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "pytest-datadir==1.5.0",
    "pytest-datafiles==3.0.0",
    "pytest-icdiff==0.9",
    "pytest-sugar==1.0.0",
    "pyyaml==6.0.2",
    "setuptools-scm==8.1.0",
    "tox==3.28.0",
    "tox-conda==0.10.2",
    "validators==0.33.0",
]

[project.urls]
Documentation = "https://geniac.readthedocs.io/en/latest/"
Demonstration = "https://github.com/bioinfo-pf-curie/geniac-demo.git"
Homepage = "https://gitlab.curie.fr/bioinfo-guidelines/geniac"

[project.optional-dependencies]
testing = [
    "setuptools",
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "pytest-icdiff",
    "pytest-datafiles",
]

[project.scripts]
geniac = "geniac.cli.__main__:main"

[tool.setuptools]
zip-safe = false
include-package-data = true
packages = [
    "geniac",
    "geniac.assets",
    "geniac.cli",
    "geniac.install",
    "geniac.cmake",
    "geniac.repo",
    "geniac.repo.assets",
    "geniac.repo.cmake",
    "geniac.repo.install",
]

# Manual package declarations (non-standard src layout with external dirs)
# These mirror the package_dir mappings from setup.cfg
[tool.setuptools.package-dir]
"" = "src"
"geniac" = "src/geniac"
"geniac.assets" = "assets"
"geniac.cli" = "src/geniac/cli"
"geniac.install" = "install"
"geniac.cmake" = "cmake"
"geniac.repo" = "."
"geniac.repo.assets" = "assets"
"geniac.repo.cmake" = "cmake"
"geniac.repo.install" = "install"

[tool.setuptools.package-data]
"*" = ["*.ini", "*.json", "*.in", "*.nf", "*.cmake", "*.bash", "*.sh", "CMakeLists.txt"]

[tool.setuptools_scm]
# version is managed dynamically by setuptools-scm
version_scheme = "post-release"

[tool.pytest.ini_options]
addopts = "--cov geniac --cov-report term-missing --verbose"
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [".tox", "build", "dist", ".eggs", "docs/conf.py"]
