# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = geniac
description = Automatic Configuration GENerator and Installer for nextflow pipeline
author = Philippe Hupé, Fabrice Allain
author-email = philippe.hupe@curie.fr
license = CeCILL
license_files = LICENSE
long-description = file: README.md, CHANGELOG, LICENSE
long-description-content-type = text/markdown; charset=UTF-8
url = https://gitlab.curie.fr/bioinfo-guidelines/geniac
# Add here related links, for example:
project-urls =
    Documentation = https://geniac.readthedocs.io/en/latest/
#    Source = https://github.com/pyscaffold/pyscaffold/
#    Changelog = https://pyscaffold.org/en/latest/changelog.html
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.8

# Add here dependencies of your project (line-separated)
install_requires =
    importlib-metadata


[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
* =
    *.ini
    *.json

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install geniac[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    pytest
    pytest-cov
    pytest-sugar
    pytest-icdiff
    pytest-datafiles

[options.entry_points]
# Add here console scripts like:
console_scripts =
     geniac = geniac.__main__:run

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov geniac --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[aliases]
dists = sdist bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max-line-length = 88
extend-ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.0b1
package = geniac
extensions =
    gitlab
    pre_commit

# .coveragerc to control coverage.py
[coverage:run]
branch = True
source = geniac
# omit = bad_file.py

[coverage:paths]
source =
    src/
    */site-packages/

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

[isort]
profile = black
known_first_party = geniac
