# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = geniac
description = Automatic Configuration GENerator and Installer for nextflow pipeline
author = Philippe Hupé, Julien Romejon, Fabrice Allain
author_email = philippe.hupe@curie.fr
license = CeCILL
license_files = LICENSE
long_description = file: README.md, CHANGELOG, LICENSE
long_description_content_type = text/markdown; charset=UTF-8
url = https://gitlab.curie.fr/bioinfo-guidelines/geniac
# Add here related links, for example:
project_urls =
    Documentation = https://geniac.readthedocs.io/en/latest/
    Demonstration = https://github.com/bioinfo-pf-curie/geniac-demo.git
#    Source = https://github.com/pyscaffold/pyscaffold/
#    Changelog = https://pyscaffold.org/en/latest/changelog.html
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3.10

# TODO: if we want to use find_namespace or find function recommended by setuptools,
# we should include all packages and data files like cmake and install folder inside src folder.
# Otherwise we have to do it manually with packages and packages_dir as it has be done below
# NB: until cmake files are not inside src folder, it's not recommended to install the
# package in editable mode with pip since cmake and py files are not in the same repository
# Basically it will break any importlib.resources access relying on cmake/install folders
# and return invalid paths using the IDE debugger. You will need to symlink those folders in src.
# This is why cmake and install are symlinked in the src folder
[options]
zip_safe = False
packages =
    geniac
    geniac.cli
    geniac.install
    geniac.cmake
    geniac.repo
    geniac.repo.cmake
    geniac.repo.install
include_package_data = True
package_dir =
    =src
    geniac=src/geniac
    geniac.cli=src/geniac/cli
    geniac.install=install
    geniac.cmake=cmake
    geniac.repo=.
    geniac.repo.cmake=cmake
    geniac.repo.install=install

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.10

# Add here dependencies of your project (line-separated)
install_requires =
    importlib-metadata
    dotty-dict==1.3.0
    colorlog==6.5.0
    cmake>=3.21.3
    GitPython==3.1.20
    validators==0.18.2


[options.packages.find]
where = src
exclude =
    tests
    docs
    data

[options.package_data]
* =
    *.ini
    *.json
    *.in
    *.nf
    *.cmake
    *.bash
    *.sh
    CMakeLists.txt

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install geniac[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov
    pytest-sugar
    pytest-icdiff
    pytest-datafiles

[options.entry_points]
# Add here console scripts like:
console_scripts =
     geniac = geniac.cli.__main__:main

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this py.test issue.
addopts =
    --cov geniac --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[aliases]
dists = sdist bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 120
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# Not necessary for pip install
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.1.1
package = geniac
extensions =
    gitlab
    pre_commit
